--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,39 @@
   <groupId>NewScanner</groupId>
   <artifactId>NewScanner</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <release>9</release>
+        </configuration>
+      </plugin>
+      <plugin>
+      	<artifactId>maven-assembly-plugin</artifactId>
+      		<configuration>
+        		<archive>
+          			<manifest>
+            			<mainClass>newscanner.Webcamprop</mainClass>
+          			</manifest>
+        		</archive>
+        		<descriptorRefs>
+         	 		<descriptorRef>jar-with-dependencies</descriptorRef>
+        		</descriptorRefs>
+      		</configuration>
+ 	   </plugin>
+    </plugins>
+  </build>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  <dependencies>
+  	<dependency>
+    	<groupId>io.reactivex</groupId>
+    	<artifactId>rxjava</artifactId>
+    	<version>1.3.6</version>
+	</dependency>
+  </dependencies>
 </project>
