--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/main/resources/global_az.properties=UTF-8
+encoding//src/main/resources/global_ru.properties=UTF-8
 encoding//src/newscanner/Back2ActionListener.java=UTF-8
 encoding//src/newscanner/Next1ActionListener.java=UTF-8
 encoding//src/newscanner/Next2ActionListener.java=UTF-8
