--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
       		<configuration>
         		<archive>
           			<manifest>
-            			<mainClass>newscanner.Webcamprop</mainClass>
+            			<mainClass>newscanner.Panel1</mainClass>
           			</manifest>
         		</archive>
         		<descriptorRefs>
@@ -36,6 +36,11 @@
     	<groupId>io.reactivex</groupId>
     	<artifactId>rxjava</artifactId>
     	<version>1.3.6</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.jfoenix</groupId>
+    	<artifactId>jfoenix</artifactId>
+    	<version>9.0.4</version>
 	</dependency>
   </dependencies>
 </project>
